download-button: fix spinner not adapting to background contrast (#7297)
* fix for light highlight colours

* thank you

* dont need this more

--- a/addons/download-button/style.css
+++ b/addons/download-button/style.css
@@ -38,9 +38,9 @@
 }
 
 #sa-download-button.loading:before {
-  background-image: url(https://scratch.mit.edu/svgs/modal/spinner-blue.svg);
+  background-image: url(https://scratch.mit.edu/svgs/modal/spinner-white.svg);
   background-size: 100%;
-  filter: grayscale(100%) brightness(0) invert(1);
+  filter: var(--darkWww-button-filter);
   animation-name: spin-intro, spin;
   animation-duration: 0.25s, 1s;
   animation-timing-function: cubic-bezier(0.3, -3, 0.6, 3), cubic-bezier(0.4, 0.1, 0.4, 1);
